# arrow-flight-sql-client

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build_assets_and_add_to_release.yml  draft_release.yml  publish_artifacts.yml  published_release.yml
file_descriptors/: readme.txt
src/: arrow.flight.protocol.rs  client.rs  lib.rs  main.rs
