[package]
name = "arrow-flight-sql-client"
version = "0.4.0"
edition = "2021"
authors = ["Tim Van Wassenhove <tim@timvw.be>"]
description = "An Apache Arrow Flight SQL client"
readme = "README.md"
repository = "https://github.com/timvw/arrow-flight-sql-client"
license = "Apache-2.0"
keywords = ["arrow", "flight-sql"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { version = "15.0.0", features = ["prettyprint"] }
#arrow-flight = "15.0.0"
tonic = "0.7"
clap = { version ="3.1.18", features = ["derive", "cargo"] }
tokio = { version = "1.18", features = ["macros", "rt", "rt-multi-thread"] }
prost = "0.10"
prost-types = { version = "0.10.1" }
prost-derive = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"]}
bytes = "1"

[build-dependencies]
tonic-build = "0.7"
